crates/engine/src/snapshots/jigc_engine__parse__fields__adr_front_matter_fields.snap
---
source: crates/engine/src/parse.rs
expression: "&status.fields"
---
[
    Field {
        key: "status",
        value: Scalar(
            "accepted",
        ),
    },
    Field {
        key: "date",
        value: Scalar(
            "2026-05-23",
        ),
    },
    Field {
        key: "supersedes",
        value: Scalar(
            "adr:single-node-cache",
        ),
    },
]
