crates/engine/src/snapshots/jigc_engine__parse__fields__malformed_anchor.snap
---
source: crates/engine/src/parse.rs
expression: f
---
Finding {
    severity: Blocking,
    probe: "conformance",
    check: "item-anchor-malformed",
    code: "conformance.item-anchor-malformed",
    message: "malformed `{#id}` anchor `{#Bad Id}` (must be a slug `[a-z0-9-]`)",
    location: Some(
        Location {
            address: Some(
                "criteria/Bad Id",
            ),
            line: 9,
            col: 1,
        },
    ),
    route: None,
}
