crates/engine/src/snapshots/jigc_engine__parse__fields__unanchored_item_heading.snap
---
source: crates/engine/src/parse.rs
expression: f
---
Finding {
    severity: Blocking,
    probe: "conformance",
    check: "item-heading-unanchored",
    code: "conformance.item-heading-unanchored",
    message: "`### A criterion with no anchor` sits at `###`, the schema-reserved item depth here, so the parser reads it as an item boundary — and it carries no `{#id}` anchor; if that line is slot prose, demote it to `####` or deeper; if it is a new item, anchor it in place — `### A criterion with no anchor  {#<id>}` — with `<id>` a lowercase-kebab slug unique among this section's items",
    location: Some(
        Location {
            address: Some(
                "criteria",
            ),
            line: 9,
            col: 1,
        },
    ),
    route: None,
}
