crates/engine/src/snapshots/jigc_engine__parse__fields__unknown_field_key.snap
---
source: crates/engine/src/parse.rs
expression: f
---
Finding {
    severity: Blocking,
    probe: "conformance",
    check: "unknown-field",
    code: "conformance.unknown-field",
    message: "unknown field key `nonsense`",
    location: Some(
        Location {
            address: Some(
                "context/nonsense",
            ),
            line: 12,
            col: 1,
        },
    ),
    route: None,
}
